deploy_backandDB.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: station-ski-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stationski-app
  template:
    metadata:
      labels:
        app: stationski-app
    spec:
      containers:
        - name: mysql
          image: mysql:latest
          ports:
            - containerPort: 3306
              name: mysql-port
        - name: backend
          image: noursine/arctic-g1-stationski:latest
          ports:
            - containerPort: 9001
              name: backend-port

---
# Service for the frontend
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: LoadBalancer
  selector:
    app: stationski-app  # Updated to match the app label in the deployment
  ports:
    - protocol: TCP
      port: 9001
      targetPort: 9001
---
# MySQL Service
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
spec:
  type: ClusterIP
  selector:
    app: stationski-app  # It should select the backend container as well
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
---
